# de_gcp_lakehouse_iceberg

./: .dockerignore  .gitignore  Dockerfile  PRD.md  README.md  SETUP.md  SLIDING_WINDOW_ENHANCEMENTS.md  env.example  main.py  pyproject.toml  requirements.txt  setup.py  test_parsing.py
sample_data/: taxi_trips_20250515_1.json  taxi_trips_20250530_2.json  taxi_trips_20250607_3.json
scripts/: aws-setup.sh  build_flex_templates.sh  cleanup_feedback_loop.sh  demo_sliding_windows.sh  deploy.sh  generate_large_dataset.py  generate_sample_data.py  rebuild_templates.sh  run_batch_job.sh  run_batch_job_flexible.sh  run_batch_job_multi_zone.sh  run_batch_job_production.sh  run_batch_job_us_central.sh  run_streaming_job.sh  test_template.sh  verify_data.sh  verify_loaded_data.sql
sql/: create_iceberg_tables.sql  create_spanner_tables.sql
src/data_generator/: README.md  main.py  requirements.txt  taxi_trip_simulator.py
src/dataflow/: batch_taxi_processor.py  beam_minimal_test.py  dataflow_template_test.py  minimal_test.py  simple_batch_processor.py  streaming_taxi_processor.py  ultra_minimal_test.py
src/maintenance/: iceberg_maintenance.py
templates/: batch-taxi-processor.json  batch_taxi_processor_metadata.json  minimal_test_metadata.json  simple_batch_metadata.json  streaming-taxi-processor.json  streaming_taxi_processor_metadata.json
terraform/: main.tf  terraform.tfvars.example  variables.tf
tests/: test_iceberg_maintenance.py  test_taxi_simulator.py
